manifests/minio-operator/templates/blahcloud-s3-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-live
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: https
    traefik.ingress.kubernetes.io/service.serversscheme: https
  name: blahcloud-s3-console
  namespace: minio-blahcloud
spec:
  rules:
    - host: s3-console.apps.blah.cloud
      http:
        paths:
          - backend:
              service:
                name: blahcloud-s3-console
                port:
                  name: https-console
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - s3-console.apps.blah.cloud
      secretName: blahcloud-s3-console-cert
