manifests/minio-operator/templates/blahcloud-s3-data-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-live
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: https
    traefik.ingress.kubernetes.io/service.serversscheme: https
  name: blahcloud-s3-data
  namespace: minio-blahcloud
spec:
  rules:
    - host: s3.apps.blah.cloud
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  name: https-minio
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - s3.apps.blah.cloud
      secretName: blahcloud-s3-data-cert
